--- a/2columnwithheaderandfooter/index.html
+++ b/2columnwithheaderandfooter/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
-        <h6>e</h6>
+        <h6>simply</h6>
     </header>
     <section>
         <div class="column1">
-            <h6>e</h6>
+            <h6>simply</h6>
         </div>
         <div class="column2">
-            <h6></h6>
+            <h6>simply</h6>
         </div>
     </section>
     <footer>
-        <h6>e</h6>
+        <h6>simply</h6>
     </footer>
-    
+
 </body>
+
 </html>
